--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "dr-denker-app",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Interactive image puzzle web application with zoom, pan, and crossword features",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
