--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "panzoom": "^9.4.3",
     "swiper": "^12.0.3",
     "vue": "^3.4.31",
+    "vue-i18n": "^9.14.5",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
